# forest

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: e2b3f001_initial_schema.py  e2b3f002_embedding_dim_3072.py
docs/: README.md  architecture.md  deployment.md  discord-setup.md  extensions.md  faq.md  index.md  installation.md  llm-configuration.md  purpose.md  slack-app-setup.md  startup.md  usage.md
forest/: __init__.py  config.py  main.py
forest/api/: __init__.py  app.py  slack_routes.py
forest/db/: __init__.py  session.py
forest/integrations/: __init__.py  types.py
forest/models/: __init__.py  base.py  file_node.py  workspace.py
forest/repositories/: __init__.py  file_node_repo.py  workspace_repo.py
forest/schemas/: __init__.py  llm_io.py
forest/services/: __init__.py  file_tree.py  ingest.py  onboarding.py  path_utils.py
forest/services/llm/: __init__.py  service.py
tests/: conftest.py  test_config.py  test_file_tree.py  test_health.py  test_path_utils.py  test_repositories_integration.py
